--- a/Sistema de Recursos Humanos/Sistema de Recursos Humanos/Sistema de Recursos Humanos.csproj
+++ b/Sistema de Recursos Humanos/Sistema de Recursos Humanos/Sistema de Recursos Humanos.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C4D15ED4-D2FF-4B40-AE1D-AA20CF44D072}</ProjectGuid>
+    <ProjectGuid>{EEC0FBA9-5968-4F50-A371-ADE5AB957C2D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>Sistema_de_Recursos_Humanos</RootNamespace>
+    <AssemblyName>Sistema de Recursos Humanos</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClsEmpleado.cs" />
-    <Compile Include="Clsmenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
